# ghost-lite

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-please.yml
src/: lib.rs
tests/: derive.rs  export.rs  multi.rs  simple.rs  vis.rs
